--- a/core/src/main/res/values-ja/strings.xml
+++ b/core/src/main/res/values-ja/strings.xml
@@ -316,8 +316,8 @@
   <string name="pref_nav_drawer_feed_counter_title">購読カウンターをセット</string>
   <string name="pref_nav_drawer_feed_counter_sum">購読カウンターに表示される情報を変更します。 \'購読順\' が \'カウンター\' に設定されている場合は、購読の並び替えにも影響します。</string>
   <string name="pref_set_theme_sum">ApexPodの外観を変更します。</string>
-  <string name="pref_automatic_download_title">自動ダウンロード</string>
-  <string name="pref_automatic_download_sum">エピソードの自動ダウンロードを構成します。</string>
+  <string name="pref_download_title">自動ダウンロード</string>
+  <string name="pref_download_sum">エピソードの自動ダウンロードを構成します。</string>
   <string name="pref_autodl_wifi_filter_title">Wi-Fiフィルターを有効にする</string>
   <string name="pref_autodl_wifi_filter_sum">選択したWi-Fiネットワークに対してのみ自動ダウンロードを許可します。</string>
   <string name="pref_automatic_download_on_battery_title">充電中以外の時にダウンロード</string>
