--- a/core/src/main/res/values-et/strings.xml
+++ b/core/src/main/res/values-et/strings.xml
@@ -393,8 +393,8 @@
   <string name="pref_nav_drawer_feed_counter_title">Määra tellimuste loendur</string>
   <string name="pref_nav_drawer_feed_counter_sum">Muuda, millist infot kuvatakse tellimuste loenduris. See mõjutab ka tellimuste järjekorda, kui \"Tellimuste järjekorra\" aluseks on \"Loendur\".</string>
   <string name="pref_set_theme_sum">ApexPodi välimuse muutmine</string>
-  <string name="pref_automatic_download_title">Automaatne allalaadimine</string>
-  <string name="pref_automatic_download_sum">Saadete automaatse allalaadimise seadistamine.</string>
+  <string name="pref_download_title">Automaatne allalaadimine</string>
+  <string name="pref_download_sum">Saadete automaatse allalaadimise seadistamine.</string>
   <string name="pref_autodl_wifi_filter_title">Luba Wifi filter</string>
   <string name="pref_autodl_wifi_filter_sum">Luba automaatne allalaadimine ainult valitud Wifi võrkudes.</string>
   <string name="pref_automatic_download_on_battery_title">Allalaadimine, kui seade ei lae</string>
