--- a/core/src/main/res/values-tr/strings.xml
+++ b/core/src/main/res/values-tr/strings.xml
@@ -354,8 +354,8 @@
   <string name="pref_nav_drawer_feed_counter_title">Abonelik sayacını ayarla</string>
   <string name="pref_nav_drawer_feed_counter_sum">Change the information displayed by the subscription counter. Also affects the sorting of subscriptions if \'Subscription Order\' is set to \'Counter\'.</string>
   <string name="pref_set_theme_sum">ApexPod\'un görüntüsünü değiştir.</string>
-  <string name="pref_automatic_download_title">Otomatk indirme</string>
-  <string name="pref_automatic_download_sum">Bölümlerin otomatik indirilmesini yapılandır.</string>
+  <string name="pref_download_title">Otomatk indirme</string>
+  <string name="pref_download_sum">Bölümlerin otomatik indirilmesini yapılandır.</string>
   <string name="pref_autodl_wifi_filter_title">Wi-Fi filtresini etkinleştir</string>
   <string name="pref_autodl_wifi_filter_sum">Seçilen kablosuz ağlar için otomatik indirmeye izin ver.</string>
   <string name="pref_automatic_download_on_battery_title">Şarj olmuyorken indir</string>
